@@ -4037,6 +4037,8 @@ enum : uint16_t
 
     STR_CONSOLE_HELPER_TEXT = 6623,
 
+    STR_SHORTCUT_SORT_ELEMENTS = 6624,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
